<resources>
    <string name="app_name">Supreme Car Wash</string>
    <string name="bnv_inicio">Inicio</string>
    <string name="bnv_citas">Citas</string>
    <string name="bnv_perfil">Perfil</string>
    <string name="bnv_servicio">Servicio</string>
    <string name="btnlogin">Iniciar sesión</string>
    <string name="titulo1">Supreme</string>
    <string name="titulo2">Car</string>
    <string name="titulo3">Wash</string>
    <string name="nologin">Si no tienes cuenta, regístrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contraseña">Introduce tu contraseña</string>
    <string name="usuario">Introduce tu usuario</string>
    <string name="btnEntrar">Entrar</string>
    <string name="apellido_del_cliente">Apellido del Cliente</string>
    <string name="direccion_del_cliente">Dirección del Cliente</string>
    <string name="nombre_del_cliente">Nombre del Cliente</string>
    <string name="correo_electronico_del_cliente">Correo Electrónico del Cliente</string>
    <string name="perfil">Perfil</string>
    <string name="marca_y_modelo">Marca y modelo</string>
    <string name="matricula">Matricula</string>
    <string name="icono_coche">Icono coche</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="datos_del_cliente">Datos del Cliente</string>

</resources>