<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/fondo3">

    <TextView
        android:id="@+id/titulo1"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pacifico"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/titulo1"
        android:textColor="@color/white"
        android:textSize="49sp"/>
    <TextView
        android:id="@+id/titulo2"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pacifico"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titulo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/titulo2"
        android:textColor="@color/white"
        android:textSize="49sp"/>
    <TextView
        android:id="@+id/titulo3"
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pacifico"
        app:layout_constraintTop_toBottomOf="@id/titulo2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textAlignment="center"
        android:text="@string/titulo3"
        android:textColor="@color/white"
        android:textSize="49sp"/>

    <!--ImageView
        android:id="@+id/fotologin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo3"
        android:layout_marginTop="10dp"
        android:src="@drawable/supreme2"/> -->

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/tieUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tiePass"
        android:layout_margin="20dp"
        android:textColorHint="@color/white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/usuario"
            android:fontFamily="@font/pacifico"
            android:textSize="17sp"
            android:textColor="@color/white"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:visibility="gone"
        android:id="@+id/tiePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnEntrar"
        android:layout_margin="20dp"
        android:textColorHint="@color/white"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/contraseña"
            android:fontFamily="@font/pacifico"
            android:textSize="17sp"
            android:textColor="@color/white"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal"
        android:text="@string/btnlogin"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/registrate"
        android:textSize="20sp"
        android:fontFamily="@font/pacifico"

        />

    <com.google.android.material.button.MaterialButton
        android:visibility="gone"
        android:id="@+id/btnEntrar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/principal"
        android:text="@string/btnEntrar"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:fontFamily="@font/pacifico"

        />
    <TextView
        android:id="@+id/registrate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nologin"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:textColor="@color/white"
        android:fontFamily="@font/pacifico"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="20sp"
        android:layout_marginBottom="30dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>